<resources>
    <string name="app_name">Maps Street View</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="title_activity_1">Activity1</string>
    <string name="title_activity_rout_finder2">RoutFinder2</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="distance_value">%f</string>
    <string name="title_activity_live_traffic">LiveTraffic</string>
    <string name="title_activity_my_track_record">MyTrackRecord</string>
    <string name="title_activity_new_compass">NewCompassActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Bubble</string>
    <string name="reset">Reset</string>
    <string name="not_supported">Orientation not supported</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrate_info">press MENU to calibrate...</string>
    <string name="calibrate_title">Calibrate your phone</string>
    <string name="calibrate_message">Put any side (including the back) of your Android device on a flat horizontal surface and press the Calibrate button.\n\nOr reset the calibration for all the phone sides.</string>
    <string name="calibrate_again_title">You must re-calibrate</string>
    <string name="calibrate_again_message">The sensor change requires re-calibration of the phone.</string>
    <string name="calibrate_saved">Custom calibration saved !</string>
    <string name="calibrate_failed">Calibration failed !</string>
    <string name="calibrate_restored">Original calibration restored !</string>
    <string name="preferences">Settings</string>
    <string name="preference_show_angle">Show numeric angle</string>
    <string name="preference_show_angle_summary">Display angle value(s) on screen</string>
    <string name="preference_display_type">Display type</string>
    <string name="preference_sound">Sound effects</string>
    <string name="preference_sound_summary">Play sound when level</string>
    <string name="preference_lock">Locking</string>
    <string name="preference_lock_summary">Allow level orientation locking</string>
    <string name="preference_viscosity">Viscosity</string>
    <string name="preference_economy">Eco mode</string>
    <string name="preference_economy_summary">Less smooth animations\nbut preserves the battery life</string>
    <string name="angle">Angle</string>
    <string name="lock_info">tap to lock level orientation</string>
    <string name="inclination">Inclination</string>
    <string name="angle_summary">Angle in degrees</string>
    <string name="inclination_summary">Inclination in percents\n100&#37; &#126; 45°</string>
    <string name="viscosity_low">Low</string>
    <string name="viscosity_medium">Medium</string>
    <string name="viscosity_high">High</string>
    <string name="viscosity_low_summary">Low viscosity\nBubble moves faster</string>
    <string name="viscosity_medium_summary">Medium viscosity\nBubble moves normally</string>
    <string name="viscosity_high_summary">High viscosity\nBubble moves slowly</string>
    <string name="orientation">Orientation</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="orientation_sensor">Orientation sensor</string>
    <string name="accelerometer_sensor">Accelerometer sensor</string>
    <string name="orientation_summary">Orientation sensor\nSensitivity depends on the phone</string>
    <string name="accelerometer_summary">Accelerometer sensor\nAccurate but sensitive to moves</string>
    <string name="prefKey_displayType_angle" translatable="false">pref_displayType_angle</string>
    <string name="prefKey_displayType_inclination" translatable="false">pref_displayType_inclination</string>

    <string name="prefKey_lockOrientation" translatable="false">pref_lockOrientation</string>

    <string name="prefKey_viscosity" translatable="false">pref_viscosity</string>
    <string name="prefKey_viscosity_low" translatable="false">pref_viscosity_low</string>
    <string name="prefKey_viscosity_medium" translatable="false">pref_viscosity_medium</string>
    <string name="prefKey_viscosity_high" translatable="false">pref_viscosity_high</string>

    <string name="prefKey_enableSound" translatable="false">pref_enableSound</string>
</resources>