<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preferences"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"

            android:summary="@string/preference_show_angle_summary"
            android:title="@string/preference_show_angle"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/prefKey_displayType_angle"

            android:title="@string/preference_display_type"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/prefKey_lockOrientation"
            android:summary="@string/preference_lock_summary"
            android:title="@string/preference_lock"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/prefKey_viscosity_medium"

            android:key="@string/prefKey_viscosity"
            android:title="@string/preference_viscosity"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/prefKey_enableSound"
            android:summary="@string/preference_sound_summary"
            android:title="@string/preference_sound"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
